
M      cg_vbm8_run.m

Call of spm_check_version in cg_vbm8_run.m is now applied using "try".
------------------------------------------------------------------------
r411 | gaser | 2011-04-14 15:37:57

M      cg_vbm8_write.m
M      cg_spmT2x.m

(1) Removed debugging code in cg_spmT2x.m.
(2) Removed changes from r410 in GBM.m.
------------------------------------------------------------------------
r412 | gaser | 2011-05-02 17:58:45

M       Contents_info.txt
M       Makefile.vbm
A       INSTALL_info.txt
D       spm_max_nS.m

(1) Updated Contents.m and added missing INSTALL.txt.
(2) Removed spm_max_nS.m.
------------------------------------------------------------------------
r413 | gaser | 2011-05-02 21:34:57

M      GBM.m

Corrected out of range warning in GBM.m.
------------------------------------------------------------------------
r414 | gaser | 2011-05-03 15:21:26

M      cg_vbm8_defs.m
M      cg_vbm8_tools.m
M      CHANGES.txt
M      cg_vbm8_longitudinal.m
M      cg_spmT2x.m

(1) Do not delete deformation field in longitudinal batch mode in 
    cg_vbm8_longitudinal.m.
(2) Add multi-file option to deformation utility.
------------------------------------------------------------------------
r415 | gaser | 2011-05-23 16:37:37

M       INSTALL_info.txt
M       GBM.m
M       cg_vbm8_write.m

(1) Limit values for bias field to 100, because sometimes artefacts at the
    borders can cause huge values in bias field.
(2) Limit histograms in GBM.m (function create_TSEG) to 1000 entries 
    to prevent memory issues.
------------------------------------------------------------------------
r416 | gaser | 2011-05-23 22:20:46

M      median3.mexa64
M      median3.mexw32
M      median3.c
M      median3.mexmaci64
M      median3.mexmaci
M      CHANGES.txt
M      median3.mexw64
M      median3.mexglx

Improved speed of skull-stripping by optimizing median3.c.
------------------------------------------------------------------------
r417 | gaser | 2011-05-24 17:05:45