@@ -126,25 +126,31 @@ matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.fwhm = 5;
 matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.rtm = 1;
 matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.interp = 2;
 matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.wrap = [0 0 0];
-matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.halfway = 1;
+matlabbatch{6}.spm.tools.vbm8.tools.realign.estimate.eoptions.halfway = 0;
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1) = cfg_dep;
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1).tname = 'Deformation Field';
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1).tgt_spec = {};
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1).sname = 'VBM8: Estimate & Write: Deformation Field';
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1).src_exbranch = substruct('.','val', '{}',{4}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
 matlabbatch{7}.spm.tools.vbm8.tools.defs.field(1).src_output = substruct('()',{1}, '.','fordef', '()',{':'});
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1) = cfg_dep;
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1).tname = 'Apply to';
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1).tgt_spec = {};
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1).sname = 'VBM8: Estimate & Write: p1 Images';
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(1).src_output = substruct('.','tiss', '()',{1}, '.','c', '()',{':'});
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2) = cfg_dep;
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2).tname = 'Apply to';
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2).tgt_spec = {};
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2).sname = 'VBM8: Estimate & Write: p2 Images';
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
-matlabbatch{7}.spm.tools.vbm8.tools.defs.fnames(2).src_output = substruct('.','tiss', '()',{2}, '.','c', '()',{':'});
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1) = cfg_dep;
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).tname = 'Images';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).tgt_spec{1}(1).name = 'filter';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).tgt_spec{1}(1).value = 'image';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).tgt_spec{1}(2).name = 'strtype';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).tgt_spec{1}(2).value = 'e';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).sname = 'VBM8: Estimate & Write: p1 Images';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(1).src_output = substruct('.','tiss', '()',{1}, '.','c', '()',{':'});
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2) = cfg_dep;
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).tname = 'Images';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).tgt_spec{1}(1).name = 'filter';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).tgt_spec{1}(1).value = 'image';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).tgt_spec{1}(2).name = 'strtype';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).tgt_spec{1}(2).value = 'e';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).sname = 'VBM8: Estimate & Write: p2 Images';
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).src_exbranch = substruct('.','val', '{}',{5}, '.','val', '{}',{1}, '.','val', '{}',{1}, '.','val', '{}',{1});
+matlabbatch{7}.spm.tools.vbm8.tools.defs.images(2).src_output = substruct('.','tiss', '()',{2}, '.','c', '()',{':'});
 matlabbatch{7}.spm.tools.vbm8.tools.defs.interp = 5;
 matlabbatch{7}.spm.tools.vbm8.tools.defs.modulate = 0;
 matlabbatch{8}.cfg_basicio.file_move.files(1) = cfg_dep;
